--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
     <title>StackOverflow Lite</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="template/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
